--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -9,6 +9,10 @@
     <!-- linking the css file -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- importing the icons  -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </head>
 <body>
     <section class="main_container">
@@ -22,22 +26,41 @@
             <!-- main bodt of the website  -->
             <div class="space">
                 <div class="img-box">
-                    <img src="https://cdn.dribbble.com/users/586152/screenshots/15097773/media/a273d57d6c1e400fecaba17094f651d3.png?compress=1&resize=400x300" alt="image of the person">
+                    <img width="200px" src="https://cdn.dribbble.com/users/586152/screenshots/15097773/media/a273d57d6c1e400fecaba17094f651d3.png?compress=1&resize=400x300" alt="image of the person">
                 </div>
+                <h1>John</h1>
                 <div class="description">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. At cum, sunt vero harum totam fugit aut incidunt sed dolor ad laudantium doloribus temporibus perferendis voluptates eius, eveniet consequatur quasi. Fugit.
                     </p>
+                    <br>
+                    <a href="#">example@gmail.com</a>
                 </div>
             </div>
 
             <footer>
                 <div class="social-media">
                     <ul>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">HOME</a></li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">HOME</a></li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">HOME</a></li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">HOME</a></li>
+                        <li>
+                            <a href="http://" target="_blank" id="Discord">
+                                <ion-icon name="logo-discord"></ion-icon>    
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" id="Facebook">
+                                <ion-icon name="logo-facebook"></ion-icon>   
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" id="Github">
+                                <ion-icon name="logo-github"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" id="Google">
+                                <ion-icon name="logo-google"></ion-icon>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </footer>
