--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -29,6 +29,7 @@
                     <img width="200px" src="https://cdn.dribbble.com/users/586152/screenshots/15097773/media/a273d57d6c1e400fecaba17094f651d3.png?compress=1&resize=400x300" alt="image of the person">
                 </div>
                 <h1>John</h1>
+                <p>A Web Developer</p>
                 <div class="description">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. At cum, sunt vero harum totam fugit aut incidunt sed dolor ad laudantium doloribus temporibus perferendis voluptates eius, eveniet consequatur quasi. Fugit.
