--- a/DesignTemplate/index.html
+++ b/DesignTemplate/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <section>
-        <head>
-            <h1>Oh My Quiz</h1>
-        </head>
+        <header>
+            <h1>My Quiz</h1>
+        </header>
 
         <div class="question">
-            <h4>What is your Name ?</h4>
+            <h4>What is the output of "5" + 5 ?</h4>
         </div>
 
         <div class="time">
-            <p id="time" onload="countDown();">
+            <p>
                 4
             </p>
         </div>
@@ -28,20 +28,20 @@
                 <div class="row">
                     <ul>
                         <li>
-                            <a href=""> Answer</a>
+                            <a href=""> 55 </a>
                         </li>
                         <li>
-                            <a href=""> Answer</a>
+                            <a href=""> 10 </a>
                         </li>
                     </ul>
                 </div>
                 <div class="row">
                     <ul>
                         <li>
-                            <a href=""> Answer</a>
+                            <a href=""> Error </a>
                         </li>
                         <li>
-                            <a href=""> Answer</a>
+                            <a href=""> 15 </a>
                         </li>
                     </ul>
                 </div>
@@ -49,11 +49,4 @@
         </main>
     </section>
 </body>
-    <script>
-        countDown = () => {
-            setTimeout( () => {
-                time.innerHTML = "1";
-            }, 1000)
-        }
-    </script>
 </html>
